# ecl3

./: CMakeLists.txt
.circleci/: config.yml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/c/: keyword.rst  summary.rst
docs/python/: summary.rst
lib/: CMakeLists.txt
lib/include/ecl3/: io.hpp  keyword.h  summary.h
lib/src/: keyword.cpp  summary.cpp
lib/tests/: summary.cpp
python/ecl3/: core.cpp
python/ecl3/summary/: __init__.py  specification.py
python/ecl3/tests/: test_specification.py
